--- a/resets.css
+++ b/resets.css
@@ -1,3 +1,10 @@
+/*
+CSS Reset's
+Author: Lukas Elner
+E-mail: lukas@elner.cz
+Web: lukas.elner.cz
+Revision: 0.2
+*/
 * {
 	padding: 0;
 	margin: 0;
